Added news function

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -123,3 +123,23 @@ table.current-weather-table {
     font-size: 22px;
     margin-top: 25px;
 }
+
+
+/* News */
+
+h2.headline {
+    font-size: 13px;
+    text-align: left;
+    margin-bottom: 2px;
+}
+
+.by-line {
+    font-size: 12px;
+    text-align: left;
+}
+
+h2#news-header {
+    font-size: 18px;
+    text-align: left;
+    margin-bottom: 8px;
+}
