First commit of 2017. Added reddit support to magic mirror

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -114,32 +114,55 @@ table.current-weather-table {
 .weather {
   display: block;
 }
-
-
-
 /* Date */
-
 .date-cont {
-    font-size: 22px;
-    margin-top: 25px;
+  font-size: 22px;
+  margin-top: 25px;
 }
-
-
 /* News */
-
 h2.headline {
-    font-size: 13px;
-    text-align: left;
-    margin-bottom: 2px;
+  font-size: 13px;
+  text-align: left;
+  margin-bottom: 2px;
 }
-
 .by-line {
-    font-size: 12px;
-    text-align: left;
+  font-size: 12px;
+  text-align: left;
+}
+h2#news-header {
+  font-size: 18px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+/* Reddit */
+.reddit .reddit-single {
+  text-align: left;
+  font-size: 14px;
+  position: relative;
+  margin-bottom: 10px;
+}
+.reddit .title {
+  font-size: 13px;
+  text-align: left;
+  margin-bottom: 2px;
+}
+.reddit .domain {
+  text-align: left;
+  font-size: 10px;
+  display: inline-block;
+}
+.reddit h2#reddit-header {
+  font-size: 18px;
+  text-align: left;
+  margin-bottom: 8px;
 }
 
-h2#news-header {
-    font-size: 18px;
-    text-align: left;
-    margin-bottom: 8px;
+.reddit .author {
+    display: block;
+    text-align: right;
+    font-size: 10px;
+    float: right;
+    position: absolute;
+    bottom: 0px;
+    right: 0;
 }
