--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -134,3 +134,34 @@ h2#news-header {
   text-align: left;
   margin-bottom: 8px;
 }
+/* Reddit */
+.reddit .reddit-single {
+  text-align: left;
+  font-size: 14px;
+  position: relative;
+  margin-bottom: 10px;
+}
+.reddit .title {
+  font-size: 13px;
+  text-align: left;
+  margin-bottom: 2px;
+}
+.reddit .domain {
+  text-align: left;
+  font-size: 10px;
+  display: inline-block;
+}
+.reddit h2#reddit-header {
+  font-size: 18px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+.reddit .author {
+  display: block;
+  text-align: right;
+  font-size: 10px;
+  float: right;
+  position: absolute;
+  bottom: 0px;
+  right: 0;
+}
